--- a/src/view/requireAuth/index.scss
+++ b/src/view/requireAuth/index.scss
@@ -14,10 +14,15 @@
     }
 }
 .content{
+    display: flex;
     color: #fff;
-    height: calc(100% - 84px);
+    height: calc(100% - 64px);
     background-color: #fff;
-
+    .content-info{
+        width: 100%;
+        height: 100%;
+        color: #666;
+    }
 }
 .footer{
     text-align: center;
