--- a/src/components/aside/index.scss
+++ b/src/components/aside/index.scss
@@ -19,8 +19,16 @@
     }
   }
   .collapse {
+    display: flex;
     position: absolute;
+    padding: 20px;
+    justify-content: space-around;
+    flex-wrap: wrap;
     left: 100%;
     top: 0;
+    width: 300px;
+    height: 100%;
+    background-color: #fff;
+    box-shadow: 0 0 1px #666;
   }
 }
