--- a/src/view/editor/leftAside/index.module.less
+++ b/src/view/editor/leftAside/index.module.less
@@ -1,13 +1,13 @@
-.aside {
+.left_aside {
   display: flex;
   flex-direction: column;
   align-items: center;
   position: relative;
-  width: 60px;
+  width: 80px;
   height: 100%;
   background-color: #fff;
   box-shadow: 0 0 2px #666;
-  .aside_item {
+  .left_aside_item {
     width: 40px;
     height: 40px;
     text-align: center;
