--- a/src/view/requireAuth/index.module.less
+++ b/src/view/requireAuth/index.module.less
@@ -3,30 +3,25 @@
     color: #fff;
     height: 64px;
     background-color: #7dbcea;
-    .header-nav{
+    .header_nav{
         display: flex;
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        .header-nav-item{
+        .header_nav_item{
             width: 80px;
         }
     }
 }
 .content{
     display: flex;
-    color: #fff;
+    width: 100%;
     height: calc(100% - 64px);
     background-color: #fff;
-    .content-info{
+    color: #fff;
+    .content_info{
         width: 100%;
         height: 100%;
         color: #666;
     }
-}
-.footer{
-    text-align: center;
-    height: 20px;
-    background-color: #7dbcea;
-    padding: 0;
 }
