--- a/src/view/editor/center/index.module.less
+++ b/src/view/editor/center/index.module.less
@@ -1,10 +1,13 @@
-.content{
-  width: 100%;
-  height: 100%;
-  .canvas{
-    margin: 20px;
-    width: calc(100% - 40px);
-    height: calc(100% - 44px);
-    box-shadow: 0 0 1px #666;
+.main {
+  display: flex;
+  // align-items: center;
+  justify-content: center;
+  flex: 1;
+  padding: 50px 0;
+  text-align: center;
+
+  .cmps {
+    position: absolute;
+    overflow: hidden;
   }
 }
